0.8.0 (currently working on)
- [#2589] Feature: Add a field "license expiry" to date records
- [#1611] Change: Add guard clauses to objectfromdb::createMmRecords
- [#2563] Fix: Deal with deleted FE users and seminars gracefully
- [#2541] Fix: Save memory by destructing the bags after usage in the tests and the production code
- [#2576] Fix: Function limitToSeatsEqualOrLessThanVacancies() is missing in registrationBagBuilder
- [#2529] Feature: Add column "status" to the BE events list
- [#1965] Fix: No gender in the CSV export of registrations
- [#1597] Change: Use the oelib mailer class for sending e-mails
- [#2526] Feature: Add a function for getting the earliest deadline for all speakers for an event
- [#2500] Fix: The class pi1_frontEndRequirementsList does not load detailPID from flexforms
- [#2552] Change: Modify cancelled field
- [#2525] Feature: Add a field "cancelation period (in days)" to the speakers
- [#2527] Feature: Add checkboxes "organizers has been notified concerning the (cancelation period|event confirmation)"
- [#2524] Feature: Add a checkbox "confirmed" to single events and dates
- [#2550] Fix: Extension menu crashes
- [#2485] Cleanup: The seminarchild constructor should have a default value for the configuration
- [#2494] Change: The autoloader should include the constants
- [#2538] Feature: Add an organizer bag builder
- [#2535] Change: Change the event-organizer relations to real m:n relations

0.7.0 (branched 2009-01-02)
- [#2520] Fix: Times are deleted when saving an event in the FE editor
- [#2519] Fix: Thank-you e-mail has a surplus colon for events without an event type
- [#2517] Fix: The category icon in the list view should have no link border
- [#2508] Fix: Category column just shows "Array" on list view other than "seminars_list"
- [#2456] Feature: Add lazy loading for models
- [#2019] Change: Change the labels "Multiple event topic|date" in locallang_db.xml